added usage list endpoint
