# rest/api/devices-api/equinix.go
@@ -2,6 +2,7 @@ package devicesapi
 
 import (
 	"fmt"
+	"github.com/application-research/estuary-metrics/core"
 	"github.com/application-research/estuary-metrics/core/dao"
 	"github.com/application-research/estuary-metrics/rest/api"
 	"github.com/gin-gonic/gin"
@@ -47,11 +48,38 @@ func GetDeviceInfo(w http.ResponseWriter, r *http.Request, ps httprouter.Params)
 	api.WriteJSON(ctx, w, info)
 }
 
-type UuidGroup struct {
-	Uuids         []string `json:"uuids"`
-	CreatedBefore string   `json:"createdBefore"`
-	CreatedAfter  string   `json:"createdAfter"`
-}
+//Backup: e4d0efb1-1b5b-4aaf-a6ed-37c4a6cc2c6f
+//Shuttle-8: 8ceea3cd-7608-4428-8d6b-99f2acc80ce3
+//Shuttle-7: 3c924716-f30e-4afd-a073-98204e4a96a7
+//Shuttle-6: 266fbb9d-56a1-4dea-9b99-9f28054c5522
+//
+//Shuttle-2: ed16760d-ec36-4d71-b46f-378428c1d774
+//Shuttle-1: 60352064-7b2c-4597-baf6-9df128e9242b
+//
+//Upload: a8e5d22b-13ef-4dc9-adcf-a3b2bb4a8863
+//API: 766557e4-1c14-4bef-a5b2-d974bbb2d848
+
+//
+//func GetAllEquinixDeviceInfoUsage(w http.ResponseWriter, r *http.Request, ps httprouter.Params) {
+//	ctx := api.InitializeContext(r)
+//	var uuidGroup UuidGroup
+//	resBody, err := ioutil.ReadAll(r.Body)
+//	if err != nil {
+//
+//		return
+//	}
+//	json.Unmarshal(resBody, &uuidGroup)
+//	createdBefore := uuidGroup.CreatedBefore
+//	createdAfter := uuidGroup.CreatedAfter
+//
+//	fmt.Println("uuid: ", uuidGroup)
+//	info, err := dao.Metrics.GetAllDeviceUsages(uuidGroup.Uuids, createdAfter, createdBefore)
+//	if err != nil {
+//		return
+//	}
+//
+//	api.WriteJSON(ctx, w, info)
+//}
 
 // GetDevicesUsages returns the device info
 // @Summary Get device usages
@@ -68,7 +96,7 @@ type UuidGroup struct {
 // @Router /environment/equinix/list/usages [post]
 func GetDevicesUsages(w http.ResponseWriter, r *http.Request, ps httprouter.Params) {
 	ctx := api.InitializeContext(r)
-	var uuidGroup UuidGroup
+	var uuidGroup core.UuidGroup
 	resBody, err := ioutil.ReadAll(r.Body)
 	if err != nil {
 		return
@@ -78,7 +106,7 @@ func GetDevicesUsages(w http.ResponseWriter, r *http.Request, ps httprouter.Para
 	createdAfter := uuidGroup.CreatedAfter
 
 	fmt.Println("uuid: ", uuidGroup)
-	info, err := dao.Metrics.GetAllDeviceUsages(uuidGroup.Uuids, createdAfter, createdBefore)
+	info, err := dao.Metrics.GetAllDeviceUsages(uuidGroup, createdAfter, createdBefore)
 	if err != nil {
 		return
 	}
